--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html>
-
-	<head>
+d>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		<title>The 5 V's of Woz</title>
 		<style>
@@ -16,7 +14,7 @@
 		</h1>
 		<p>
 
-		The 5 V's refer to the 5 V's of Big Data. The Woz refers to Steve Wozniak, who attended the University of Colorado for a year and who this peice is deticated to. The 5 V's of big data are as follows, and the piece attemps to capture the nature of each of them and display artwork which is bound by data in the world. The peice uses data from different social media sites, weather, and even sound data within the atlass building.
+		The 5 V's refer to the 5 V's of Big Data. The Woz refers to Steve Wozniak, who attended the University of Colorado for a brief time, and who this peice is deticated to. The 5 V's of big data are listed below, and the piece attemps to capture the nature of each of them and display artwork which is bound by data in the world. The peice uses data from different social media sites, weather, and even sound data within the atlas building.
 
 		</p>
 		<ul>
