--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Image 4 parses the contents of the subreddits to calculate the number of keyword
 
 <p>
 	<h1>Image 5</h1>
-	The image is connected to Yahoo Finance API that pulls Apple’s stock price and volume. The image reacts to the change in stock price and volume. As the stock price increases, the CU logo is green and becomes more green with a larger increase. As the stock price decreases, the CU logo is red and becomes more red with a larger decrease. The volume is a measure of the number of shares traded during a given period of time. As more trades are executed, the background is more red and as less trades are executed, the background is more blue.
+	The image is connected to Yahoo Finance API that pulls Apple’s stock price and volume. The image reacts to the change in stock price and volume. As the stock price increases, the beard is green and becomes more green with a larger increase. As the stock price decreases, the hair is red and becomes more red with a larger decrease. The volume is a measure of the number of shares traded during a given period of time. As more trades are executed, the background is more red and as less trades are executed, the background is more blue.
 </p>
 
 <p>
